--- a/contact.html
+++ b/contact.html
@@ -9,28 +9,28 @@
 </head>
 
 <body>
-  <table cellspacing="30" width="750px" align="center">
+  <table cellspacing="15" align="center">
     <tr>
       <td>
         <h3>M</h3>
-        <h3>y</h3>
+        <h3>Y</h3>
       </td>
       <td>
         <h3>C</h3>
-        <h3>o</h3>
-        <h3>n</h3>
-        <h3>t</h3>
-        <h3>a</h3>
-        <h3>c</h3>
-        <h3>t</h3>
+        <h3>O</h3>
+        <h3>N</h3>
+        <h3>T</h3>
+        <h3>A</h3>
+        <h3>C</h3>
+        <h3>T</h3>
       </td>
       <td>
         <h3>P</h3>
-        <h3>e</h3>
-        <h3>r</h3>
-        <h3>s</h3>
-        <h3>o</h3>
-        <h3>n</h3>
+        <h3>E</h3>
+        <h3>R</h3>
+        <h3>S</h3>
+        <h3>O</h3>
+        <h3>N</h3>
       </td>
       <td>
         <table align="center">
