--- a/index.html
+++ b/index.html
@@ -34,13 +34,18 @@
 
   <hr>
 
-  <a href="contact.html">My Contact Person</a>
+  <table align="center">
+    <tr>
+      <td> <a href="contact.html">☎ My Contact Person</a></td>
+      <td> <a href="project.html">📃 Project Has Been Done</a></td>
+    </tr>
+  </table>
+
+  <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Experience</h3>
   <ul>
     <li>Teaching Assistant for <i>Pengenalan Sistem Informasi Basis Data (PSIBD)</i> for Bioprocess Engineering students in semester VI</li>
     <li>Web Developer for Kominfo Tapanuli Utara</li>
   </ul>
-
-  <a href="project.html">Project Has Been Done</a>
 
   <hr>
 
@@ -55,45 +60,40 @@
     <tbody>
       <tr>
         <td>Web Development</td>
-        <td>⭐⭐⭐⭐</td>
+        <td>⭐⭐⭐</td>
         <td>Front End Developer</td>
-        <td>⭐⭐⭐⭐</td>
+        <td>⭐⭐⭐</td>
       </tr>
       <tr>
         <td>Back End Developer</td>
-        <td>⭐⭐⭐⭐</td>
+        <td>⭐⭐⭐</td>
         <td>UI/UX</td>
         <td>⭐⭐⭐⭐</td>
       </tr>
       <tr>
         <td>Mobile Developer</td>
-        <td>⭐⭐⭐⭐</td>
+        <td>⭐⭐</td>
         <td>Database Administrator</td>
-        <td>⭐⭐⭐⭐</td>
+        <td>⭐⭐⭐</td>
       </tr>
     </tbody>
   </table>
 
   <hr>
 
-  <table cellspacing="10px">
+  <table cellspacing="20px" align="center">
     <form action="mailto:ruben@gmail.com" method="post" enctype="text/plain">
+      <caption><b>Your Information</b></caption>
       <tr>
         <td>
-          <label>Username</label>
+          <label>Name</label>
         </td>
         <td>
           <input type="text" name="username">
         </td>
       </tr>
       <tr>
-        <td>Password</td>
-        <td>
-          <input type="password">
-        </td>
-      </tr>
-      <tr>
-        <td>Your Email</td>
+        <td>Email</td>
         <td>
           <input type="email" name="password" value="">
         </td>
@@ -114,7 +114,7 @@
         </td>
       </tr>
       <tr>
-        <td>How you Interest to me?</td>
+        <td>How much you Interest to me?</td>
         <td>
           <input type="range" name="range" min="0" max="10">
         </td>
@@ -143,7 +143,7 @@
           <label>Describe About you</label>
         </td>
         <td>
-          <textarea name="name" rows="8" cols="80" name="Describe"></textarea>
+          <textarea name="name" rows="4" cols="40" name="Describe"></textarea>
         </td>
       </tr>
       <tr>
@@ -153,7 +153,6 @@
             <legend>Aggrement</legend>
             <p>
               Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
             <input type="checkbox" name="aggree">
             <label for="">I am Aggree.</label>
