--- a/index.html
+++ b/index.html
@@ -4,168 +4,121 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Welcome to Ruben's Personal Pages, in this website you can know more about me.">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Ruben's Profile Page</title>
+  <title>My Site</title>
+  <link href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat&family=Open+Sans&family=Roboto&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
+  <!-- Navbar -->
+  <section class="navbar-section">
+    <div class="container">
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="#">Ruben</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="list-menu navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#landing-page-section">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#experience">Experience</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#achievement">Achievement</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+  </section>
 
-  <table cellspacing="20px">
-    <tr>
-      <td>
-        <img src="img/circle-cropped.png" width="200px;" alt="ruben profil picture" style="border-radius:70%;">
-      </td>
-      <td>
-        <h1>Ruben Manurung</h1>
-        <em>
-          <strong>
-            <p>Web Developer</p>
-          </strong>
-        </em>
-        <p>
-          I am Fresh Graduate student majoring in Diploma Three <strong><em>Technology Information</em></strong> from <a href="https://www.del.ac.id/">Institut Teknologi Del.</a>
-          I am passioning <strong>Design</strong> and <strong>Website Developer</strong>. I like new challenge that can improve my knowledge and skill.
-          I am experience work in individual or in team. I have great communication skill.
-        </p>
-      </td>
-    </tr>
-  </table>
 
-  <hr>
+  <!-- Landing-Page Section -->
+  <section id="landing-page-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6">
+          <h2 class="name">I'm Ruben Manurung</h2>
+          <h4 class="role">Web Developer</h4>
+          <p class="description">
+            I am Fresh Graduate student majoring in Diploma Three Technology Information from Institut Teknologi Del.
+            I am passioning Design and Website Developer. I like new challenge that can improve my knowledge and skill.
+            I am experience work in individual or in team. I have great communication skill.
+          </p>
+        </div>
 
-  <table align="center">
-    <tr>
-      <td> <a href="contact.html">☎ My Contact Person</a></td>
-      <td> <a href="project.html">📃 Project Has Been Done</a></td>
-    </tr>
-  </table>
 
-  <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Experience</h3>
-  <ul>
-    <li>Teaching Assistant for <i>Pengenalan Sistem Informasi Basis Data (PSIBD)</i> for Bioprocess Engineering students in semester VI</li>
-    <li>Web Developer for Kominfo Tapanuli Utara</li>
-  </ul>
+        <div class="col-lg-6">
+          <div class="circle">
 
-  <hr>
+          </div>
+          <div class="shadow">
 
-  <table cellspacing="20px" align="center">
-    <thead>
-      <caption><b>Skills</b></caption>
-      <th></th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Web Development</td>
-        <td>⭐⭐⭐</td>
-        <td>Front End Developer</td>
-        <td>⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <td>Back End Developer</td>
-        <td>⭐⭐⭐</td>
-        <td>UI/UX</td>
-        <td>⭐⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <td>Mobile Developer</td>
-        <td>⭐⭐</td>
-        <td>Database Administrator</td>
-        <td>⭐⭐⭐</td>
-      </tr>
-    </tbody>
-  </table>
+          </div>
+          <img class="ruben-img" src="img/ruben-no-bg.png" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
 
-  <hr>
+  <section class="container" id="experience">
+    <h1>Experience</h1>
+    <div class="row">
+      <div class="col-lg-6">
+        <img class="rounded" src="img/training.png" width="200px;" alt="">
+        <h3>Teaching Assistant</h3>
+        <p>Teaching Assistant for Pengenalan Sistem Informasi Basis Data (PSIBD) for Bioprocess Engineering students in semester VI</p>
+      </div>
+      <div class="col-lg-6">
 
-  <table cellspacing="20px" align="center">
-    <form action="mailto:ruben@gmail.com" method="post" enctype="text/plain">
-      <caption><b>Your Information</b></caption>
-      <tr>
-        <td>
-          <label>Name</label>
-        </td>
-        <td>
-          <input type="text" name="username">
-        </td>
-      </tr>
-      <tr>
-        <td>Email</td>
-        <td>
-          <input type="email" name="password" value="">
-        </td>
-      </tr>
-      <tr>
-        <td>Birthday</td>
-        <td>
-          <input type="date" name="date">
-        </td>
-      </tr>
-      <tr>
-        <td>Gender</td>
-        <td>
-          <input type="radio" name="gender" id="woman">
-          <label for="woman">Woman</label>
-          <input type="radio" name="gender" id="man">
-          <label for="man">Man</label>
-        </td>
-      </tr>
-      <tr>
-        <td>How much you Interest to me?</td>
-        <td>
-          <input type="range" name="range" min="0" max="10">
-        </td>
-      </tr>
-      <tr>
-        <td>Your Favorite Color</td>
-        <td>
-          <input type="color" name="color">
-        </td>
-      </tr>
-      <tr>
-        <td>Religion</td>
-        <td>
-          <select name="religion">
-            <option value="">--Please choose an option--</option>
-            <option value="Muslim">Muslim</option>
-            <option value="Kristen">Kristen</option>
-            <option value="Buddha">Buddha</option>
-            <option value="Hindu">Hindu</option>
-            <option value="another">Another</option>
-          </select>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <label>Describe About you</label>
-        </td>
-        <td>
-          <textarea name="name" rows="4" cols="40" name="Describe"></textarea>
-        </td>
-      </tr>
-      <tr>
-        <td></td>
-        <td>
-          <fieldset>
-            <legend>Aggrement</legend>
-            <p>
-              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            </p>
-            <input type="checkbox" name="aggree">
-            <label for="">I am Aggree.</label>
-          </fieldset>
-        </td>
-      </tr>
-      <tr>
-        <td></td>
-        <td><input type="submit"></td>
-      </tr>
-    </form>
-  </table>
+        <img class="rounded" src="img/positive-charges.png" width="200px;" alt="">
+        <h3>Web Developer</h3>
+        <p>Web Developer for Kominfo Tapanuli Utara</p>
+      </div>
+    </div>
+  </section>
 
+  <section id="achievement">
+    <h1>Achievement</h1>
+    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active" data-interval="5000">
+          <img class="slide1 rounded" src="img/sertifikat/Sertifikat Bekraf.jpg" alt="...">
+          <h4>Workshop Calon Enterpreneur Bekraf</h4>
+        </div>
+        <div class="carousel-item" data-interval="5000">
+          <embed src="Folder/Sertifikat-Metrodata Mengajar_Ruben Manurung.pdf" type="application/pdf" width="20%" height="200px" />
+          <h4>IT Project Management : Mengenal lebih dekat metode Agile (Scrum & Kanban)</h4>
+        </div>
+        <div class="carousel-item" data-interval="5000">
+          <img src="img/sertifikat/Sertifikat-Godigital_GoDanaToba_Ruben.jpg" alt="...">
+          <h4>Participant of Go Digital Go Danau
+            Toba 2018</h4>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+
+  </section>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </body>
 
 </html>
