--- a/index.html
+++ b/index.html
@@ -1,124 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>My Site</title>
-  <link href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat&family=Open+Sans&family=Roboto&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/styles.css">
+  <meta charset="utf-8">
+  <title>Your Tutorial</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-  <!-- Navbar -->
-  <section class="navbar-section">
-    <div class="container">
-      <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#">Ruben</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="list-menu navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#landing-page-section">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#experience">Experience</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#achievement">Achievement</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </div>
-  </section>
-
-
-  <!-- Landing-Page Section -->
-  <section id="landing-page-section">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6">
-          <h2 class="name">I'm Ruben Manurung</h2>
-          <h4 class="role">Web Developer</h4>
-          <p class="description">
-            I am Fresh Graduate student majoring in Diploma Three Technology Information from Institut Teknologi Del.
-            I am passioning Design and Website Developer. I like new challenge that can improve my knowledge and skill.
-            I am experience work in individual or in team. I have great communication skill.
-          </p>
-        </div>
-
-
-        <div class="col-lg-6">
-          <div class="circle">
-
-          </div>
-          <div class="shadow">
-
-          </div>
-          <img class="ruben-img" src="img/ruben-no-bg.png" alt="">
-        </div>
+  <nav class="navbar navbar-expand-lg">
+    <a class="navbar-brand" href="#">Ruben Space</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="about.html">About Us</a>
+        <a class="nav-link" href="#">Contact Us</a>
       </div>
     </div>
-  </section>
+  </nav>
 
-  <section class="container" id="experience">
-    <h1>Experience</h1>
-    <div class="row">
-      <div class="col-lg-6">
-        <img class="rounded" src="img/training.png" width="200px;" alt="">
-        <h3>Teaching Assistant</h3>
-        <p>Teaching Assistant for Pengenalan Sistem Informasi Basis Data (PSIBD) for Bioprocess Engineering students in semester VI</p>
-      </div>
-      <div class="col-lg-6">
+  <div class="stars"></div>
+  <div class="twinks"></div>
+  <div class="earth"></div>
+  <div class="mists"></div>
 
-        <img class="rounded" src="img/positive-charges.png" width="200px;" alt="">
-        <h3>Web Developer</h3>
-        <p>Web Developer for Kominfo Tapanuli Utara</p>
-      </div>
-    </div>
-  </section>
+  <div>
+    <a href="about.html"><img src="images/pesawat.gif" alt="rocket" class="rocket" width="50px"></a>
+  </div>
 
-  <section id="achievement">
-    <h1>Achievement</h1>
-    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active" data-interval="5000">
-          <img class="slide1 rounded" src="img/sertifikat/Sertifikat Bekraf.jpg" alt="...">
-          <h4>Workshop Calon Enterpreneur Bekraf</h4>
-        </div>
-        <div class="carousel-item" data-interval="5000">
-          <embed src="Folder/Sertifikat-Metrodata Mengajar_Ruben Manurung.pdf" type="application/pdf" width="20%" height="200px" />
-          <h4>IT Project Management : Mengenal lebih dekat metode Agile (Scrum & Kanban)</h4>
-        </div>
-        <div class="carousel-item" data-interval="5000">
-          <img src="img/sertifikat/Sertifikat-Godigital_GoDanaToba_Ruben.jpg" alt="...">
-          <h4>Participant of Go Digital Go Danau
-            Toba 2018</h4>
-        </div>
-      </div>
-      <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-
-  </section>
-
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+  <div>
+    ©Copyright : <a href="#">Your Website</a>
+  </div>
 </body>
 
 </html>
