--- a/about.html
+++ b/about.html
@@ -20,16 +20,17 @@
       <div class="navbar-nav">
         <a class="nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
         <a class="nav-link" href="about.html">About Us</a>
-        <a class="nav-link" href="#">Contact Us</a>
+        <a class="nav-link" href="contact.html">Contact Us</a>
       </div>
     </div>
   </nav>
 
-  <div class="starwars-demo">
-    <h1 class="star">I'm Ruben Manurung</h1>
-    <h2 class="wars">Let's Make Amazing Website with Me
-    </h2>
+
+
+  <div class="about-demo">
+    <h1 class="about-ruben">Hi, I'm Ruben Manurung</h1>
     <h2 class="byline" id="byline">Website Developer</h2>
+    <h2 class="wars">Let's Make Amazing Website with Me</h2>
   </div>
 
   <script type="text/javascript" src="js/script.js"></script>
