--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
       </div>
 
       <div class="card col-lg-3" style="width: 18rem;">
-        <img src="images/pinterest.png" class="card-img-top" alt="...">
+        <img src="images/Pinterest.png" class="card-img-top" alt="...">
         <div class="card-body">
           <p class="card-text">
             <a href="https://id.pinterest.com/rubenmichael199/_saved/">Ruben Manurung</a>
