--- a/index.html
+++ b/index.html
@@ -227,14 +227,13 @@
 
         <div class="col-lg-4 col-md-6 mt-5">
           <div class="card">
-            <img src="assets/images/drumKit.PNG" class="card-img-top" alt="...">             
+            <img src="assets/images/gendang.PNG" class="card-img-top" alt="...">             
                  <div class="icon"><i class="material-icons md-36">favorite_border</i></div>
                  <p class="title">Drum Kit App</p>
                  <p class="text">See your skills playing the drums.</p>
                  <a href="https://github.com/RubenManurung/drum-JS" target="_blank" class="text-success pt-5">See detail.</a>
            </div>
         </div>
-
 
         <div class="col-lg-4 col-md-6 mt-5">
           <div class="card">
